--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://c.pxhere.com/photos/54/91/photo-129822.jpg!d);
+    background-image: url("images/computer.webp");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -46,4 +46,36 @@ p{
     color: black;
     text-align: left;
     font-weight: bold;
+}
+
+#menu {
+    list-style: none;
+    float: left;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+div {
+    display: block;
+}
+#menubar {
+    width: 900px;
+    height: 72px;
+    padding: 0;
+    background: transparent url(transparent_light.png) repeat;
 }
