--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1{
 #box1{
     width: 80%;
     overflow: hidden;
-    background: transparent url(https://www.html5webtemplates.co.uk/wp-content/uploads/2020/templates/textured_stars/style/transparent_light.png);
+    background: transparent url("images/background.png");
     margin: 0 auto 0 auto;
     padding: 20px 24px 20px 20px;
 }
@@ -26,20 +26,9 @@ h1{
 #content1 {
     width: 80%;
     overflow: hidden;
-    background: transparent url(https://www.html5webtemplates.co.uk/wp-content/uploads/2020/templates/textured_stars/style/transparent_light.png);
+    background: transparent url("images/background.png");
     margin: 0 auto 0 auto;
     padding: 20px 24px 20px 20px;
-}
-
-#box2{
-    width: 80%;
-    overflow: hidden;
-    background: transparent url(https://www.html5webtemplates.co.uk/wp-content/uploads/2020/templates/textured_stars/style/transparent_light.png);
-    margin: 0 auto 0 auto;
-    padding: 20px 24px 20px 20px;
-    position: relative;
-    top: 63px;
-    left: -161px;
 }
 
 #content{
@@ -77,7 +66,7 @@ ul {
 #a1 {
 	display: block;
 	padding: 8px;
-	background-color: url(https://www.html5webtemplates.co.uk/wp-content/uploads/2020/templates/textured_stars/style/transparent_light.png);
+	background-color: url("images/background.png");
 	font-size: 26px;
 	font-family: sans-serif;
 	
